# NDRect

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: ndrect.doctree  ndrectcomplex.doctree  ndrectcomplexunaligned.doctree
.github/workflows/: pytest.yml  sphinx.yml
api/: ndrect.html  ndrectcomplex.html  ndrectcomplexunaligned.html
docs/: genindex.html  index.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/source/: conf.py  index.md
docs/source/api/: ndrect.md  ndrectcomplex.md  ndrectcomplexunaligned.md
ndrect/: __init__.py  _is_aligned.py  _is_sequenceable.py  _ndrect_base.py  _typing.py  ndrect.py  ndrect_complex.py  ndrect_complex_unaligned.py
tests/: __init__.py
tests/ndrect/: mock_ndrect.py  test__is_aligned.py  test__ndrect_base.py  test_ndrect_complex.py
