[project]
name = "ndrect"
version = "0.1.0"
description = "NDimensional Hyper-Rectangles"
requires-python = ">=3.14"
dependencies = [
    "attrs>=25.4.0",
]

[tool.ruff]
line-length = 79
exclude = [
    "docs/conf.py",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[dependency-groups]
docs = [
    "myst-parser>=4.0.1",
    "sphinx<9",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-rtd-theme>=3.0.2",
]
