[project]
name = "ndrect"
version = "0.1.0"
description = "NDimensional Hyper-Rectangles"
requires-python = ">=3.14"
dependencies = [
    "attrs>=25.4.0",
]

[tool.ruff]
line-length = 79
exclude = [
    "docs/source/conf.py",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pydocstyle
    "D",
    # flake8-annotations
    "ANN",
    # tryceratops
    "TRY",
]
ignore = [
    "D203",  # Disable `incorrect-blank-line-before-class`
    "D213",  # Disable `multi-line-summary-second-line`
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[dependency-groups]
docs = [
    "myst-parser>=4.0.1",
    "sphinx<9",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-rtd-theme>=3.0.2",
]
tests = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ndrect"
module-root = ""
